--- a/Logistic_Website/Logistic_Website/Logistic_Website.csproj
+++ b/Logistic_Website/Logistic_Website/Logistic_Website.csproj
@@ -10,4 +10,13 @@
     <None Include="wwwroot\css\style.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Excel\" />
+  </ItemGroup>
+
 </Project>
