--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="EPPlus" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageVersion Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
